@@ -905,6 +905,8 @@ class PokerAvatar:
                                                            auto_blind_ante = player.auto_blind_ante,
                                                            wait_for = player.wait_for,
                                                            seat = player.seat))
+            # Send the stats packet, generated by the UserStats package.
+            self.sendPacketVerbose(self.service.getUserStatsLookup().allStatsAsPacket(self.table, self))
             if not game.isPlaying(player.serial):
                 self.sendPacketVerbose(PacketPokerPlayerChips(game_id = game.id,
                                                               serial = player.serial,
